Fix formatting in HTML files

--- a/engagements/engagement-Compliance.html
+++ b/engagements/engagement-Compliance.html
@@ -97,32 +97,32 @@
     <ul>
         <li>
             <p>
-            <strong>Déploiement des Nouvelles Procédures </strong>Collaborant étroitement avec le département Compliance Groupe, ils participent au déploiement efficace des nouvelles procédures au sein de leur région respective.
+            <strong>Déploiement des Nouvelles Procédures : </strong>Collaborant étroitement avec le département Compliance Groupe, ils participent au déploiement efficace des nouvelles procédures au sein de leur région respective.
             </p>
         </li>
         <li>
             <p>
-            <strong>Intégration des Spécificités Locales </strong>Ils veillent à ce que les spécificités locales soient prises en compte lors de la mise en œuvre des nouvelles procédures, garantissant ainsi une adaptation pertinente au contexte régional.
+            <strong>Intégration des Spécificités Locales : </strong>Ils veillent à ce que les spécificités locales soient prises en compte lors de la mise en œuvre des nouvelles procédures, garantissant ainsi une adaptation pertinente au contexte régional.
             </p>
         </li>
         <li>
             <p>
-            <strong>Formation des Employés </strong>Compliance Officers locaux ont pour mission d'assurer une compréhension adéquate des nouvelles procédures par les employés de leur région. Cela implique la mise en place de programmes de formation et de sensibilisation.
+            <strong>Formation des Employés : </strong>Compliance Officers locaux ont pour mission d'assurer une compréhension adéquate des nouvelles procédures par les employés de leur région. Cela implique la mise en place de programmes de formation et de sensibilisation.
             </p>
         </li>
         <li>
             <p>
-            <strong>Contrôle de l'Application des Règles </strong>Sous la supervision de la Group Compliance Officer, ils sont responsables du contrôle effectif de l'application des nouvelles règles au niveau local, veillant à ce que celles-ci soient correctement suivies.
+            <strong>Contrôle de l'Application des Règles : </strong>Sous la supervision de la Group Compliance Officer, ils sont responsables du contrôle effectif de l'application des nouvelles règles au niveau local, veillant à ce que celles-ci soient correctement suivies.
             </p>
         </li>
         <li>
             <p>
-            <strong>Favoriser les Échanges </strong>En agissant comme des intermédiaires entre le département Compliance Groupe et les employés locaux, ils favorisent les échanges et la communication, contribuant ainsi à une mise en œuvre plus fluide des procédures.
+            <strong>Favoriser les Échanges : </strong>En agissant comme des intermédiaires entre le département Compliance Groupe et les employés locaux, ils favorisent les échanges et la communication, contribuant ainsi à une mise en œuvre plus fluide des procédures.
             </p>
         </li>
         <li>
             <p>
-            <strong>Promotion d'une Culture de la Transparence </strong>Les Compliance Officers locaux jouent un rôle clé dans la promotion d'une culture de la transparence au sein de l'organisation, soulignant l'importance de la conformité et de l'éthique dans toutes les activités.
+            <strong>Promotion d'une Culture de la Transparence : </strong>Les Compliance Officers locaux jouent un rôle clé dans la promotion d'une culture de la transparence au sein de l'organisation, soulignant l'importance de la conformité et de l'éthique dans toutes les activités.
             </p>
         </li>
     </ul>
