--- a/engagements/engagement-RSE.html
+++ b/engagements/engagement-RSE.html
@@ -102,21 +102,21 @@
                 <ul>
                     <li>
                         <p>
-                            <strong>Droits de l'Homme </strong>A Simple Way affirme son soutien et son respect envers la protection des droits de l'homme, évitant toute complicité dans les violations de droits fondamentaux.
+                            <strong>Droits de l'Homme : </strong>A Simple Way affirme son soutien et son respect envers la protection des droits de l'homme, évitant toute complicité dans les violations de droits fondamentaux.
                         </p>
                     </li>
                     <li>
                         <p>
-                            <strong>Droit du Travail </strong>Le groupe s'efforce de garantir la liberté d'association et la reconnaissance effective du droit à la négociation collective, ainsi que l'élimination de toutes les formes de travail forcé et obligatoire.
+                            <strong>Droit du Travail : </strong>Le groupe s'efforce de garantir la liberté d'association et la reconnaissance effective du droit à la négociation collective, ainsi que l'élimination de toutes les formes de travail forcé et obligatoire.
                         </p>
                     </li>
                     <li>
                         <p>
-                            <strong>Environnement </strong>A Simple Way s'engage à promouvoir une approche proactive de la protection de l'environnement, en prenant des initiatives pour prévenir les problèmes environnementaux.
+                            <strong>Environnement : </strong>A Simple Way s'engage à promouvoir une approche proactive de la protection de l'environnement, en prenant des initiatives pour prévenir les problèmes environnementaux.
                         </p>
                     </li>
                     <li>
-                        <p><strong>Lutte contre la Corruption </strong>En tant que membre du Pacte Mondial, A Simple Way s'engage à lutter contre la corruption sous toutes ses formes, y compris l'extorsion et la corruption.
+                        <p><strong>Lutte contre la Corruption : </strong>En tant que membre du Pacte Mondial, A Simple Way s'engage à lutter contre la corruption sous toutes ses formes, y compris l'extorsion et la corruption.
                         </p>
                     </li>
                 </ul>
