--- a/services/interim.html
+++ b/services/interim.html
@@ -131,7 +131,7 @@
                 <li><strong>Continuité de service : </strong>Assurer une continuité de service sans faille est une priorité.</li>
                 <li><strong>Recrutement : </strong>Le recrutement des collaborateurs nécessaires à la prestation représente un défi.</li>
                 <li><strong>Force de proposition : </strong>Vous attendez une collaboration proactive et des idées innovantes.</li>
-                <li><strong>Réactivité et Proximité</strong>La réactivité et la proximité dans le suivi, ainsi que la gestion des réclamations et des demandes, sont cruciales.</li>
+                <li><strong>Réactivité et Proximité : </strong>La réactivité et la proximité dans le suivi, ainsi que la gestion des réclamations et des demandes, sont cruciales.</li>
             </ul>
         </div>
         <img src="assets/Interim & Recrutement/echange.png" alt="échange">
