Update service offering description

--- a/services/offre.html
+++ b/services/offre.html
@@ -74,8 +74,8 @@
             A Simple Way, votre partenaire privilégié pour des solutions
             sur mesure : Que vous ayez besoin de la gestion experte d'un
             service spécifique ou de la coordination complète de tous vos
-            besoins en services généraux, NOUS SOMMES LA POUR VOUS.
-
+            besoins en services généraux, <strong>NOUS SOMMES LA POUR VOUS</strong>.
+            <br><br>
             Imaginez l'impact de notre expertise dans des dizaines de
             milliers d'espaces de travail, de vie et de loisirs. Nous
             sommes les architectes de l'entretien, de la sécurité et de
@@ -83,7 +83,7 @@
             accueillants et plus fonctionnels. Notre mission est de
             transformer chaque lieu en un actif de valeur, offrant une
             expérience unique à ses occupants.
-
+            <br><br>
             A Simple Way libère les organisations des tracas opérationnels
             pour qu'elles se concentrent pleinement sur leur cœur d'activités.
             En prenant soin des personnes et de leur environnement, nous nous
