Fix formatting in offre.html

--- a/services/offre.html
+++ b/services/offre.html
@@ -74,7 +74,7 @@
             A Simple Way, votre partenaire privilégié pour des solutions
             sur mesure : Que vous ayez besoin de la gestion experte d'un
             service spécifique ou de la coordination complète de tous vos
-            besoins en services généraux, <strong>NOUS SOMMES LA POUR VOUS</strong>.
+            besoins en services généraux, NOUS SOMMES LA POUR VOUS.
             <br><br>
             Imaginez l'impact de notre expertise dans des dizaines de
             milliers d'espaces de travail, de vie et de loisirs. Nous
