--- a/about/values.html
+++ b/about/values.html
@@ -20,7 +20,7 @@
                     <li><a href="about.html">Présentation</a></li>
                     <li><a href="engagement.html">Nos engagements</a></li>
                     <li><a href="values.html">Nos valeurs</a></li>
-                    <li><a href="key_numbers.html">Chiffres clés</a></li>
+                    <!-- <li><a href="key_numbers.html">Chiffres clés</a></li> -->
                     <li><a href="expertise.html">Notre expertise</a></li>
                     <li><a href="innovation.html">Innovation</a></li>
                 </ul>
