--- a/engagements/engagement-RSE.html
+++ b/engagements/engagement-RSE.html
@@ -17,12 +17,12 @@
             <li class="navbar"><a href="../index.html"><img src="../assets/logos/ASW BF.png" style="height: 30px; width: 50px;" alt="logo atalian"></a></li>
             <li class="navbar"><a href="#">À propos</a>
                 <ul class="drop">
-                    <li><a href="about.html">Présentation</a></li>
-                    <li><a href="engagement.html">Nos engagements</a></li>
-                    <li><a href="values.html">Nos valeurs</a></li>
-                    <li><a href="key_numbers.html">Chiffres clés</a></li>
-                    <li><a href="expertise.html">Notre expertise</a></li>
-                    <li><a href="innovation.html">Innovation</a></li>
+                    <li><a href="../about/about.html">Présentation</a></li>
+                    <li><a href="../about/engagement.html">Nos engagements</a></li>
+                    <li><a href="../about/values.html">Nos valeurs</a></li>
+                    <!-- <li><a href="../about/key_numbers.html">Chiffres clés</a></li> -->
+                    <li><a href="../about/expertise.html">Notre expertise</a></li>
+                    <li><a href="../about/innovation.html">Innovation</a></li>
                 </ul>
             </li>
             <li class="navbar"><a href="#">Services</a>
