Update email address for contact button

--- a/services/proprete.html
+++ b/services/proprete.html
@@ -347,7 +347,7 @@
     <div class="contact">
         <h2>contacter ASW</h2>
         <p>Vous êtes intéressé par nos services ?<br>Cliquez ci-dessous pour nous transmettre votre requête.</p>
-        <a href="mailto:dir-commerciale@atalian.com"><button class="button">Cliquez</button></a>
+        <a href="mailto:dir-commerciale@aswafrique.com"><button class="button">Cliquez</button></a>
     </div>
     <div class="barre-de-contact">
         <ul class="CB1">
