--- a/medias/télécharger_nos_brochures.html
+++ b/medias/télécharger_nos_brochures.html
@@ -107,6 +107,12 @@
             </li>
         </ul>
     </div>
+    <div class="barre-de-contact">
+        <ul class="CB1">
+             <li><a href="../contact/Contact.php">contact</a></li>
+            <li><a href="../about/about.html">à propos de nous</a></li>
+        </ul>
+    </div>
 </body>
 </html>
 
